--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,5 @@
-fixtures:  
+---
+fixtures:
   repositories:
-    stdlib: 'https://github.com/puppetlabs/puppetlabs-stdlib.git'
-    cron_core:
-      repo: "https://github.com/puppetlabs/puppetlabs-cron_core"
+    cron_core: https://github.com/puppetlabs/puppetlabs-cron_core
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
