--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,4 +2,6 @@
 fixtures:
   repositories:
     cron_core: https://github.com/puppetlabs/puppetlabs-cron_core
+    epel: https://github.com/voxpupuli/puppet-epel.git
     stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
+    yumrepo_core: https://github.com/puppetlabs/puppetlabs-yumrepo_core.git
